--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/blue-waves.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -85,10 +85,10 @@
         </div>
       </div>
     </div>
+    <a href='https://www.freepik.es/fotos/agua'>Foto de Agua creado por frimufilms - www.freepik.es</a>
   </div><!-- End Hero Section -->
 
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
